CR-2002-03-27-2  Merge:     merged inst_sge from V53_beta2_BRANCH

CR-2002-03-27-1  Bugfix:    Fixed broken shadow daemon qmaster startup functionality 
                            merge from V53_beta2_BRANCH

SD-2002-03-26-2  Bugfix:    Fixed "missing node XXXXX in dst trees" problem where
                            a temporary share tree node was being sent to qmaster

AH-2002-03-26-1  Bugfix:    Found and fixed infinite loop in commd in case host
                            formerly resolved by gethostbyname(3) is no longer
                            resolvable. Also fix commd option -dhr which was -drh
                            before.
                 Bugtraq:   #4658193
                 Issue:     #212

CR-2002-03-26-5  Bugifx:    fixed broken aimk -secure build

CR-2002-03-26-4  Testsuite: merge from V53_beta2_BRANCH
                 Bugfix:

CR-2002-03-26-3  Merge:     merge from V53_beta2_BRANCH
                 Bugfix:    - wrong error handling if qmaster is down and
                              user tries qdel -f 
                            - changed code formating
                 Bugfix:    qstat -f -> 
                            8 x times logging: "... neither submit nor admin host"

                 Bugfix:    can't resolve hostname "%-.100s" from act_qmaster file
                            message

                 Bugfix:    qacct output formatting

                 Bugfix:    changed error messages when master commd is not
                            reachable.

                 Bugfix:    removed forgotten #if0 - #endif statement which
                            chauses scheduler to abort() on testsuite's 
                            path_alias check.

                 Bugfix:    scheduler generates high CPU load for 1-2 minutes
                            when sge_commd is killed.
                 Issue:     #197
               
JG-2002-03-26-0  Testsuite: Installation with many hosts did not work due to