@@ -1,3 +1,7 @@
+AH-2002-03-27-1  Enhancm.:  Changed Maintrunk GRM_GDI_VERSION to a very high value
+                            and renamed from "5.3beta2" this version to 
+                            "pre6.0 (Maintrunk)"
+
 CR-2002-03-27-2  Merge:     merged inst_sge from V53_beta2_BRANCH
 
 CR-2002-03-27-1  Bugfix:    Fixed broken shadow daemon qmaster startup functionality 
